# serializer version: 1
# name: test_child_issue_only_for_must_or_should
  '''
  # MCP-007 — MUST failure in `good`
  
  **Evidence.** README missing 'Configuration'
  
  **Standards reference.** See `consistency-check/docs/standards/` for rule MCP-007.
  
  **Re-run after fix.**
  
  ```
  uv run consistency-check audit --repo good
  ```
  
  '''
# ---
# name: test_umbrella_lists_failures_grouped_by_tier
  '''
  # Consistency audit: `good`
  
  Generated by `consistency-check`. Authoritative standards: `consistency-check/docs/standards/`.
  
  ## Summary
  
  | Tier | pass | fail | n/a | error |
  | --- | --- | --- | --- | --- |
  | MUST | 1 | 1 | 1 | 0 |
  | SHOULD | 0 | 0 | 0 | 0 |
  | MAY | 0 | 1 | 0 | 0 |
  
  ## Stage
  
  Unstaged — add an `S0`-`S4` token to the README `## Status` section.
  
  ## Required fixes (MUST / SHOULD)
  
  ### MUST (1)
  
  - **MCP-007** — README missing 'Configuration' → see child issue.
  
  ## Suggestions (MAY) — 1
  
  - **MCP-018** — no release.yml
  
  ---
  
  Re-run: `uv run consistency-check audit --repo good`.
  
  '''
# ---
# name: test_umbrella_staged_section
  '''
  # Consistency audit: `s`
  
  Generated by `consistency-check`. Authoritative standards: `consistency-check/docs/standards/`.
  
  ## Summary
  
  | Tier | pass | fail | n/a | error |
  | --- | --- | --- | --- | --- |
  | MUST | 1 | 1 | 1 | 0 |
  | SHOULD | 0 | 0 | 0 | 0 |
  | MAY | 0 | 0 | 0 | 0 |
  
  ## Stage
  
  Declared **S1**; S1 gates failing: PROTO-001.
  
  To reach **S2**: MCP-014.
  
  ## Required fixes (MUST / SHOULD)
  
  ### MUST (1)
  
  - **PROTO-001** — tool not snake_case → see child issue.
  
  ---
  
  Re-run: `uv run consistency-check audit --repo s`.
  
  '''
# ---
